--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName = com.mysql.cj.jdbc.Driver
-jdbc.url = jdbc:mysql://ra1.anystream.eu:3012/studentmvc
+jdbc.url = jdbc:mysql://ra1.anystream.eu:3012/studentmvc?serverTimezone=Europe/Athens
 jdbc.username = root
 jdbc.password = AFDEmp_MySQL1
 
